[package]
name = "rates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19",features = ["serde"]}
color-eyre = "0.6.1"
lower = { path="../lower" }
reqwest = { version = "0.11.10", features = ["json"] }
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
reqwest-tracing = { version = "0.2.1", features = ["opentelemetry_0_17"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
